<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">区管干部</string>
    <string name="county">镇街领导</string>
    <string name="direct">区级机关</string>
    <string name="back">后备干部</string>
    <string name="researcher">调研员</string>
    <string name="serverUrl">http://192.168.1.7:8080/cadreServer/</string>
    <string name="mainTitleName">区管干部基本情况</string>
    <string name="gesture_password">123</string>
    <!--文件路径-->
    <string name="filePath">Android/docs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    <array name="typeList">
        <item>镇街干部视图</item>
        <item>区级干部视图</item>
    </array>-->


    <array name="countyTitleList" tools:ignore="MissingDefaultResource">
        <item>镇长</item>
        <item>人大主席</item>
        <item>副书记</item>
        <item>纪委书记</item>
        <item>组织</item>
        <item>宣传统战</item>
        <item>文教</item>
        <item>经济</item>
        <item>城建</item>
        <item>农业</item>
        <item>人武</item>
        <item>纪委书记</item>
        <item>派出所长</item>
        <item>副主席</item>
        <item>副主席</item>
        <item>不定</item>
    </array>

    <array name="titleArray">
        <item>镇街干部</item>
        <item>区级机关</item>
        <item>后备干部</item>
        <item>调研员</item>
    </array>

    <array name="fragmentList" tools:ignore="MissingDefaultResource">
        <item>CountyFragment</item>
        <item>DirectFragment</item>
        <item>BackupFragment</item>
        <item>ResearcherFragment</item>
    </array>


    <array name="colorList" tools:ignore="MissingDefaultResource">
        <item>#5a9cd5</item>
        <item>#fb6800</item>
        <item>#9b9b9b</item>
        <item>#ffb600</item>
        <item>#2f66c3</item>
        <item>#4da628</item>
        <item>#01548a</item>
        <item>#9e3900</item>
        <item>#9e3900</item>
        <item>#946800</item>
        <item>#62a6dd</item>
        <item>#fe883f</item>
        <item>#ffc20e</item>
        <item>#FF4081</item>
    </array>
</resources>
