<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1d4c7b"
    android:gravity="center"
    android:orientation="vertical">
   <!-- <LinearLayout
        android:id="@+id/gesture_ll"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_state"
            android:gravity="center"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="请输入手势密码"
            android:textSize="26sp"/>
        <CheckBox
            android:id="@+id/reset_rb"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:text="修改密码"/>
&lt;!&ndash;        <com.syd.oden.gesturelock.view.GestureLockViewGroup
            android:id="@+id/gesturelock"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:color_finger_on="#00aded"
            app:color_no_finger="#f8f8f8"
            app:preference_id="1"
            android:layout_marginTop="30dp"
            app:count="4" />&ndash;&gt;
    </LinearLayout>-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_gravity="left"
            android:layout_marginLeft="60px">
            <ImageView
                android:id="@+id/logo_list"
                android:layout_marginLeft="70px"
                android:layout_marginRight="10px"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:src="@drawable/logo_list"/>
            <TextView
                android:paddingBottom="25dp"
                android:paddingTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10px"
                android:gravity="center"
                android:text="萧山区管干部基本情况"
                android:textColor="#fff"
                android:textSize="40sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/welcome_ll"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="560px"
            android:layout_marginTop="10px"
            android:padding="3dp"
            android:gravity="center"
            android:background="@drawable/welcome_bgd">
            <ImageView
                android:id="@+id/welcome_bdg"
                android:layout_width="1800px"
                android:layout_height="568px"
                android:layout_gravity="center_vertical"
                android:src="@drawable/loading"/>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="40dp"
                android:orientation="horizontal"
                >
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/welcome_county"
                        android:layout_width="wrap_content"
                        android:layout_height="70px"
                        android:layout_marginRight="100px"
                        android:background="@drawable/shape_welcome_btn"
                        android:text="@string/county"
                        android:textColor="#fff"
                        android:textSize="18sp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <!--<com.example.yyyyz.systonpad.LoadButton
                        android:id="@+id/welcome_direct"
                        android:layout_width="wrap_content"
                        android:layout_height="70px"
                        android:layout_marginRight="100px"
                        android:text="区级干部"
                        android:textSize="18dp" />-->
                <Button
                    android:id="@+id/welcome_direct"
                    android:layout_width="wrap_content"
                    android:layout_height="70px"
                    android:background="@drawable/shape_welcome_btn"
                    android:text="@string/direct"
                    android:textColor="#fff"
                    android:textSize="18sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/welcome_backup"
                    android:layout_width="wrap_content"
                    android:layout_height="70px"
                    android:background="@drawable/shape_welcome_btn"
                    android:text="@string/back"
                    android:textColor="#fff"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/welcome_researcher"
                    android:layout_width="wrap_content"
                    android:layout_height="70px"
                    android:background="@drawable/shape_welcome_btn"
                    android:text="@string/researcher"
                    android:textColor="#fff"
                    android:textSize="18sp"/>
            </LinearLayout>
        </LinearLayout>


    </FrameLayout>

</LinearLayout>
